k8s/data-script-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.kompose.yml -o k8s/
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: data-script
  name: data-script
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.kompose.yml -o k8s/
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.network/myapp: "true"
        io.kompose.service: data-script
    spec:
      containers:
      - env:
        - name: MYSQL_HOST
          value: data
        - name: MYSQL_PASSWORD
          value: root
        - name: MYSQL_USER
          value: root
        image: blueapple685/quotes-data-script:v1
        name: data-script
        resources: {}
      restartPolicy: Always
status: {}
