k8s/front-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.kompose.yml -o k8s/
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: front
  name: front
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.kompose.yml -o k8s/
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.network/myapp: "true"
        io.kompose.service: front
    spec:
      containers:
      - image: blueapple685/quotes-front:v1
        name: front
        ports:
        - containerPort: 3001
        resources: {}
      restartPolicy: Always
status: {}
