k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    io.kompose.service: back   # matches labels from Kompose back-deployment
  ports:
    - port: 3000
      targetPort: 3000
