k8s/myapp-networkpolicy.yaml
apiVersion: extensions/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: myapp
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/myapp: "true"
  podSelector:
    matchLabels:
      io.kompose.network/myapp: "true"
